bpo-31271: Fix an assertion failure in io.TextIOWrapper.write. (#3201)